unpackaged/main/default/objects/Survey__c/fields/Sales_Q1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Q1__c</fullName>
    <label>Survey Q1</label>
    <type>TextArea</type>
</CustomField>