unpackaged/main/default/objects/Survey__c/fields/servey_A1__c.field-meta.xml
<CustomField>
    <fullName>servey_A1__c</fullName>
    <label>servey A1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>