unpackaged/main/default/objects/Survey__c/fields/servey_id__c.field-meta.xml
<CustomField>
    <fullName>servey_id__c</fullName>
    <displayFormat>{DD}-{MM}-{YYYY}-{000}</displayFormat>
    <label>servey id</label>
    <type>AutoNumber</type>
</CustomField>