unpackaged/main/default/objects/Survey__c/fields/Survey_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Created_Date__c</fullName>
    <label>Survey Created Date</label>
    <type>Date</type>
</CustomField>