unpackaged/main/default/objects/Survey__c/fields/Survey_Q2__c.field-meta.xml
<CustomField>
    <fullName>Survey_Q2__c</fullName>
    <label>Survey Q2</label>
    <type>TextArea</type>
</CustomField>